# evobench

./: LICENSE.txt  README.md  conanfile.py  concept.md
cpp/: CMakeLists.txt  conanfile.py
cpp/examples/: Makefile
cpp/include/: evobench.hpp
cpp/src/: evobench.cpp
evobench-evaluator/: Cargo.toml  README.md  build.rs
evobench-evaluator/docs/: hacking.md  overview.md  usage.md
evobench-evaluator/docs/internals/: index.md
evobench-evaluator/include/: evobench_point_kind.rs
evobench-evaluator/src/: change.rs  config_file.rs  conslist.rs  crypto_hash.rs  ctx.rs  date_and_time.rs  digit_num.rs  dynamic_typing.rs  evaluator.rs  excel_table_view.rs  get_terminal_width.rs  git.rs  git_tags.rs  index_by_call_path.rs  io_util.rs  join.rs  json5_from_str.rs  key.rs  key_val_fs.rs  lazy.rs  lib.rs  linear.rs  load_config_file.rs  lockable_file.rs  log_data_and_tree.rs  log_data_index.rs  log_data_tree.rs  log_file.rs  log_message.rs  path_summary.rs  path_util.rs  pn_summary.rs  rayon_util.rs  safe_string.rs  scope.rs  serde_util.rs  stats.rs  table.rs  table_field_view.rs  table_view.rs  (+5 more)
evobench-evaluator/src/date_and_time/: mod.rs  time_ranges.rs  unixtime.rs
evobench-evaluator/src/evaluator/: all_fields_table.rs  all_outputs_all_fields_table.rs  evaluator.rs  mod.rs  options.rs
evobench-evaluator/src/io_utils/: bash.rs  capture.rs  div.rs  mod.rs  tempfile_utils.rs  temporary_file.rs
evobench-evaluator/src/key_val_fs/: as_key.rs  key_val.rs  mod.rs  queue.rs
evobench-evaluator/src/run/: benchmark_job.rs  benchmarking_job.rs  command_log_file.rs  config.rs  custom_parameter.rs  dataset_dir_env_var.rs  env_vars.rs  global_app_state_dir.rs  insert_jobs.rs  migrate.rs  mod.rs  output_directory_structure.rs  polling_pool.rs  post_process.rs  run_context.rs  run_job.rs  run_queue.rs  run_queues.rs  versioned_dataset_dir.rs  working_directories.rs  working_directory.rs  working_directory_pool.rs
evobench-evaluator/src/serde/: allowed_env_var.rs  date_and_time.rs  git_branch_name.rs  git_hash.rs  git_url.rs  key_val.rs  map.rs  mod.rs  paths.rs  priority.rs  proper_dirname.rs  proper_filename.rs  regex.rs  tilde_path.rs  val_or_ref.rs  value_or_ref.rs
evobench-evaluator/src/silo/: query.rs
evobench-evaluator/src/stats/: average.rs  mod.rs  weighted.rs
evobench-evaluator/src/tables/: excel_table_view.rs  mod.rs  table.rs  table_field_view.rs  table_view.rs
evobench-evaluator/src/util/: mod.rs  (+2 more)
evobench-evaluator/tests/: play_around.rs
(+201 files in other folders)
