[package]
name = "evobench-evaluator"
version = "0.1.0"
edition = "2021"

[lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"

[profile.release]
overflow-checks = true

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"]}
clap = { version = "3", features = ["derive"] }
terminal_size = "0.2"
chrono = "0.4"
lazy_static = "1.4"
itertools = "0.11.0"
thiserror = "1.0.37"
walkdir = "2"
os_info = "=3.7"
rayon = "1.5.3"
serde = { version = "1.0.154", features = ["derive"] }
serde_json= "1.0"
kstring = "1.0"
num-traits = "0.2.15"
rand = "0.8.5"
ruzstd = { version = "0.7.3", default-features = false, features = ["std"] }
rust_xlsxwriter = "=0.75.0"
genawaiter = { version= "0.99.1", default-features= false }
