[package]
name = "evobench-evaluator"
version = "0.1.0"
edition = "2021"

[lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"

[profile.release]
overflow-checks = true

[dependencies]
run-git  = { path = "../../xmlhub-indexer/libs/run-git" }

anyhow = { version = "1.0.65", features = ["backtrace"]}
clap = { version = "3", features = ["derive"] }
terminal_size = "0.2"

strum = "0.20.0"
strum_macros = "0.20.1"
enumn = "0.1.9"

lazy_static = "1.4"
itertools = "0.11.0"
thiserror = "1.0.37"
rayon = "1.5.3"

serde = { version = "1.0.154", features = ["derive", "rc"] }
serde_json= "1.0"
serde_path_to_error = "0.1.11"
ron = "0.8.1"
serde_json5 = "0.2.1"
serde_yml = "0.0.12"
hcl-rs = "=0.18.2"

sha2 = "0.10.8"
base64 = "0.21.7"

kstring = "1.0"
num-traits = "0.2.15"
rand = "0.8.5"
ruzstd = { version = "0.7.3", default-features = false, features = ["std"] }
rust_xlsxwriter = "=0.75.0"
genawaiter = { version = "0.99.1", default-features = false }
mimalloc = "0.1.43"
inferno = { version = "0.11.21", default-features = false, features = [] }
ouroboros = "0.18.5"
fs2 = "0.4.3"

chrono = "0.4"
walkdir = "2"
os_info = "=3.7"
